sample/asm/errors/jump_to_unrecognised_marker.asm
.function: main/0
    jump foo
    izero 0
    return
.end
